--- a/src/Gradebook/Gradebook.Data/Gradebook.Data.csproj
+++ b/src/Gradebook/Gradebook.Data/Gradebook.Data.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Gradebook.Shared\Gradebook.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
