--- a/src/Gradebook/Gradebook.Shared/Gradebook.Shared.csproj
+++ b/src/Gradebook/Gradebook.Shared/Gradebook.Shared.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Mapster" Version="7.4.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
+  </ItemGroup>
+
 </Project>
