--- a/src/Gradebook/Gradebook.Web/Gradebook.Web.csproj
+++ b/src/Gradebook/Gradebook.Web/Gradebook.Web.csproj
@@ -4,9 +4,12 @@
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>66e0fd88-1fe7-4973-9e57-a2b3a2158d33</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1-Preview.1" />
     <PackageReference Include="MudBlazor" Version="8.6.0" />
   </ItemGroup>
 
