--- a/src/Gradebook/Gradebook.API/Gradebook.API.csproj
+++ b/src/Gradebook/Gradebook.API/Gradebook.API.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>6381a6e6-c0ba-4c80-bb1c-fb063f47319c</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
