--- a/src/Gradebook/Gradebook.Data/Gradebook.Data.csproj
+++ b/src/Gradebook/Gradebook.Data/Gradebook.Data.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.1" />
+	<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.0" />
   </ItemGroup>
 
   <ItemGroup>
