--- a/src/Gradebook/Gradebook.API/appsettings.json
+++ b/src/Gradebook/Gradebook.API/appsettings.json
@@ -8,5 +8,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Host=gradebook.db;Username=postgres;Password=postgres;Database=Gradebook;Include Error Detail=true"
+  },
+  "JwtSettings": {
+    "AuthSecurityKey": "v13wT3HSzvc7O69amRIKEZcaCpdpImUW",
+    "AccessSecurityKey": "i7Y827ZUEQQYvo7Kju7vvfU9OErwutJe",
+    "AuthTokenExpirationMinutes": 5,
+    "AccessTokenExpirationMinutes": 60,
+    "RefreshTokenExpirationDays": 2
   }
 }
