--- a/src/Gradebook/nuget.config
+++ b/src/Gradebook/nuget.config
@@ -6,7 +6,7 @@
 
   <packageSourceMapping>
     <packageSource key="nuget.org">
-      <package pattern="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" />
+		<package pattern="*" />
     </packageSource>
   </packageSourceMapping>
 </configuration>
