--- a/src/Gradebook/launchSettings.json
+++ b/src/Gradebook/launchSettings.json
@@ -4,8 +4,8 @@
       "commandName": "DockerCompose",
       "commandVersion": "1.0",
       "composeLaunchAction": "LaunchBrowser",
-      "composeLaunchServiceName": "gradebook.api",
-      "composeLaunchUrl": "{Scheme}://localhost:{ServicePort}/swagger",
+      "composeLaunchServiceName": "gradebook.web",
+      "composeLaunchUrl": "{Scheme}://localhost:{ServicePort}",
       "serviceActions": {
         "gradebook.api": "StartDebugging",
         "gradebook.db": "StartWithoutDebugging",
