Added GradesController ( Get & Get/id works only)

--- a/src/Gradebook/Gradebook.API/appsettings.json
+++ b/src/Gradebook/Gradebook.API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=gradebook.db;Username=postgres;Password=postgres;Database=Gradebook;Include Error Detail=true"
+    "DefaultConnection": "Host=localhost;Username=postgres;Password=admin;Database=Gradebook;Include Error Detail=true"
   },
   "JwtSettings": {
     "AuthSecurityKey": "v13wT3HSzvc7O69amRIKEZcaCpdpImUW",
