--- a/src/Gradebook/Gradebook.Web/Gradebook.Web.csproj
+++ b/src/Gradebook/Gradebook.Web/Gradebook.Web.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1-Preview.1" />
     <PackageReference Include="MudBlazor" Version="8.6.0" />
   </ItemGroup>
