--- a/src/Gradebook/Gradebook.Web/appsettings.json
+++ b/src/Gradebook/Gradebook.Web/appsettings.json
@@ -6,5 +6,12 @@
     }
   },
   "AllowedHosts": "*",
-  "ApiAddress": "http://gradebook.api/"
+  "ApiAddress": "http://gradebook.api/",
+  "JwtSettings": {
+    "AuthSecurityKey": "v13wT3HSzvc7O69amRIKEZcaCpdpImUW",
+    "AccessSecurityKey": "i7Y827ZUEQQYvo7Kju7vvfU9OErwutJe",
+    "AuthTokenExpirationMinutes": 5,
+    "AccessTokenExpirationMinutes": 60,
+    "RefreshTokenExpirationDays": 2
+  }
 }
