Fixed Grade, School, Absence Controllers & Teacher (PUT & DELETE DOESNT WORK)

--- a/src/Gradebook/Gradebook.Web/Gradebook.Web.csproj
+++ b/src/Gradebook/Gradebook.Web/Gradebook.Web.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\Gradebook.Shared\Gradebook.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Components\Pages\Login\" />
+  </ItemGroup>
+
 </Project>
