--- a/src/Gradebook/Gradebook.API/Gradebook.API.csproj
+++ b/src/Gradebook/Gradebook.API/Gradebook.API.csproj
@@ -34,4 +34,6 @@
     <ProjectReference Include="..\Gradebook.Shared\Gradebook.Shared.csproj" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 </Project>
