Enhance error handling and logging
- Configured Serilog logging in `Program.cs` and added error handling middleware.
- Updated `appsettings.json` with Serilog configuration settings.
- Introduced new database-related error codes in `ErrorCodes.cs`.
- Added a `HashSet` of index violations in `IndexConstants.cs`.
- Created `ErrorHandlingMiddleware` to manage exceptions in the request lifecycle.
- Added `Utils` class for generating detailed error messages.

--- a/src/Gradebook/Gradebook.API/appsettings.json
+++ b/src/Gradebook/Gradebook.API/appsettings.json
@@ -15,5 +15,21 @@
     "AuthTokenExpirationMinutes": 5,
     "AccessTokenExpirationMinutes": 60,
     "RefreshTokenExpirationDays": 2
+  },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.File" ],
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "Path": "Logs/log-.txt",
+          "RollingInterval": "Day",
+          "RetainedFileCountLimit": 7,
+          "OutputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level}] {Message}{NewLine}{Exception}"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext" ]
   }
 }
