Added Authentication & Authorization to client-side
- Updated `.gitignore` to ignore logs and data protection keys.
- Enhanced `MainLayout.razor` with user state checks and loading indicators.
- Changed navigation behavior in `ProfilePicker.razor.cs` after login.
- Replaced `RouteView` with `AuthorizeRouteView` in `Routes.razor`.
- Added `CustomAuthStateProvider` for managing authentication state.
- Implemented data protection services in `Program.cs`.
- Modified `docker-compose.yml` for data protection key volumes.
- Created `RedirectToLogin.razor` for handling unauthenticated access.

--- a/src/Gradebook/docker-compose.yml
+++ b/src/Gradebook/docker-compose.yml
@@ -27,6 +27,8 @@ services:
     depends_on:
       gradebook.api:
         condition: service_started
+    volumes:
+      - ./dataprotection-keys:/keys
 
   gradebook.db:
     container_name: gradebook.db
@@ -42,3 +44,4 @@ services:
 
 volumes:
   gradebook.db-data:
+  dataprotection-keys:  
