--- a/src/Gradebook/Gradebook.Web/Gradebook.Web.csproj
+++ b/src/Gradebook/Gradebook.Web/Gradebook.Web.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
@@ -7,6 +7,7 @@
     <UserSecretsId>66e0fd88-1fe7-4973-9e57-a2b3a2158d33</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
 	<DockerFileContext>..\..</DockerFileContext>
+	<ApplicationIcon>wwwroot\favicon.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
